# pulumi-template-aws-python

./: .bandit  .gitignore  .pre-commit-config.yaml  LICENSE  Pulumi.yaml  README.md  add_author.py  fix_template.py  pylama.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: __main__.py  configuration.py
src/common/: __init__.py  metadata.py  taggable.py  tagging.py
