[tool.poetry]
name = "${PROJECT}"
version = "0.1.0"
description = "${DESCRIPTION}"
authors = ["Piotr Kowalski <piotr.kowalski.it@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.15.0"
pulumi-aws = "^4.25.0"
common = {path = "../common", develop = true}

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^21.9b0"
pylama_pylint = "^3.1.1"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
